--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -49,6 +49,11 @@
             android:name="com.kakao.LoginActivity"
             android:configChanges="orientation|screenSize"/>
         
+        <activity android:name=".activity.FacebookPostingActivity" />
+        <activity android:name=".activity.FacebookLoginActivity" />
+        
+        <activity android:name="com.facebook.LoginActivity" android:label="@string/app_name" />
+        
         <meta-data android:name="com.kakao.sdk.AppKey" android:value="@string/kakao_app_key"/>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
         
