--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -50,7 +50,9 @@
         <activity
             android:name="com.kakao.LoginActivity"
             android:configChanges="orientation|screenSize" />
-        <activity android:name=".activity.FacebookPostingActivity" />
+        <activity
+            android:name=".activity.FacebookPostingActivity"
+            android:theme="@style/Transparent" />
         <activity android:name=".activity.FacebookLoginActivity" />
         <activity
             android:name="com.facebook.LoginActivity"
