--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:name=".GlobalData"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/angel"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
@@ -28,28 +28,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.ResultActivity"
-            android:label="@string/title_activity_result" >
+            android:name=".activity.MainActivity"
+            android:label="@string/title_activity_intro" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="@string/kakaostory_host"
-                    android:scheme="@string/kakao_scheme" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/title_activity_intro" >
-        </activity>
-        <activity android:name=".activity.KakaoStoryLoginActivity" />
+            android:name=".activity.KakaoStoryLoginActivity"
+            android:theme="@style/Transparent" />
         <activity android:name=".activity.KakaoStoryPostingActivity" />
+        <activity android:name=".activity.KakaoStorySignupActivity" />
         <activity
             android:name="com.kakao.LoginActivity"
-            android:configChanges="orientation|screenSize" />
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/Transparent" />
+        
         <activity
             android:name=".activity.FacebookPostingActivity"
             android:theme="@style/Transparent" />
