--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:name=".GlobalData"
         android:allowBackup="true"
-        android:icon="@drawable/angel"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
